deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vcf-depot
  labels:
    app.kubernetes.io/name: vcf-depot-manager
