deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vcf-depot-ingress
  namespace: vcf-depot
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vcf-depot.lab.internal
      secretName: vcf-depot-tls
  rules:
    - host: vcf-depot.lab.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vcf-depot-manager
                port:
                  name: http
